--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,2 +1,7 @@
 group = 'com.megateam.lab.common'
 version = '1.0.0'
+
+dependencies {
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'com.sun.xml.bind:jaxb-impl:2.3.4'
+}
