--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,4 +3,6 @@ version = '1.0.0'
 
 dependencies {
 	implementation project(':common')
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'com.sun.xml.bind:jaxb-impl:2.3.4'
 }
