--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,3 +6,17 @@ dependencies {
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	implementation 'com.sun.xml.bind:jaxb-impl:2.3.4'
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.megateam.lab.server.TestServer'
+	}
+
+	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+
+	from {
+		configurations.runtimeClasspath.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	}
+}
