server module main class renamed to Server

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 
 jar {
 	manifest {
-		attributes 'Main-Class': 'com.megateam.lab.server.TestServer'
+		attributes 'Main-Class': 'com.megateam.lab.server.Server'
 	}
 
 	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
