--- a/client/build.gradle
+++ b/client/build.gradle
@@ -4,3 +4,17 @@ version = '1.0.0'
 dependencies {
 	implementation project(':common')
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.megateam.lab.client.Client'
+	}
+
+	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+
+	from {
+		configurations.runtimeClasspath.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	}
+}
